# PyPartMC

./: .appveyor.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PyPartMC.html  README.md  apt.txt  hello_world.ipynb  index.html  pypartmc.F90  pypartmc.cpp  pyproject.toml  search.js  setup.py  test-time-requirements.txt
.binder/: apt.txt  postBuild  requirements.txt
.github/: dependabot.yml
.github/workflows/: buildwheels.yml  cancel.yml  cancel.yml.off  codecov.yml  codecov.yml.off  conda.yml  conda.yml.off  cpplint.yml  forlint.yml  forlint.yml.off  manylinux.yml  pdoc.yml  pre-commit.yml  pylint.yml  pylint.yml.off  readme_julia.yml  readme_listings.yml  readme_listings.yml.off  readme_matlab.yml  readme_python.yml  stale.yml  stale.yml.off  test_conda.yml  tests+artifacts+pypi.yml  tests+artifacts.yml  tests+pypi.yml  tests.yml  urlcheck.yml
.github/workflows.off/: readme_python.yml  stale.yml  tests+artifacts+pypi.yml
PyPartMC/: _PyPartMC.html  __init__.py
examples/: additive_coag_comparison.ipynb  chamber.ipynb  cloud_parcel.ipynb  condense.ipynb  hello_world.ipynb  immersion_freezing.ipynb  lognorm_ex.ipynb  mie_optical.ipynb  particle_simulation.ipynb  particle_simulation_with_camp.ipynb  process_simulation_output.ipynb  terminal_velocities.ipynb  widgets_playground.ipynb
examples/monarch_mod37/tsigaridis_2_product_SOA_scheme/: species.json
examples/paper_listings/fortran/: CMakeLists.txt  main.f90
examples/paper_listings/julia/: main.jl
examples/paper_listings/python/: main.py
readme_cpp/: CMakeLists.txt  test.cpp
readme_fortran/: CMakeLists.txt  main.f90
src/: aero_binned.F90  aero_binned.hpp  aero_data.F90  aero_data.hpp  aero_dist.F90  aero_dist.hpp  aero_mode.F90  aero_mode.hpp  aero_particle.F90  aero_particle.hpp  aero_state.F90  aero_state.hpp  bin_grid.F90  bin_grid.cpp  bin_grid.hpp  camp_core.F90  camp_core.hpp  condense.F90  condense.cpp  condense.hpp  env_state.F90  env_state.hpp  fake_mpi.F90  fake_mpi.cpp  fake_netcdf.F90  fake_netcdf.cpp  fake_netcdf.hpp  fake_spec_file.F90  fake_spec_file.cpp  gas_data.F90  gas_data.hpp  gas_state.F90  gas_state.hpp  getters.hpp  gimmicks.cpp  gimmicks.hpp  input_guard.hpp  json_resource.cpp  json_resource.hpp  output.F90  (+35 more)
src/PyPartMC/: __generate_si.py  __init__.py
src/PyPartMC/cmake/: PyPartMCConfig.cmake
tests/: common.py  conftest.py  test_aero_binned.py  test_aero_data.py  test_aero_dist.py  test_aero_mode.py  test_aero_particle.py  test_aero_state.py  test_bin_grid.py  test_camp_core.py  test_condense.py  test_dtors.py  test_env_state.py  test_examples.py  test_gas_data.py  test_gas_state.py  test_gimmicks.py  test_help.py  test_input_guard.py  test_loss_rate.py  test_output.py  test_photolysis.py  test_rand.py  test_run_exact.py  test_run_exact_opt.py  test_run_part.py  test_run_part_opt.py  test_run_part_opt_t.py  test_run_sect.py  test_run_sect_opt.py  test_scenario.py  test_todos_annotated.py  test_units.py  test_util.py  test_version.py
