[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "post-release"

[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "setuptools-scm==8.3.1"]
build-backend = "scikit_build_core.build"

[project]
name = "PyPartMC"
dynamic = ["version"]
description = "Python interface to PartMC"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "https://github.com/open-atmos/PyPartMC/graphs/contributors", email = "nriemer@illinois.edu"}
]
classifiers = [
    "License :: GPL-3.0",
]
dependencies = [
    "numpy",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-order",
]
examples = [
    "matplotlib != 3.10.0",
    "ipywidgets",
    "voila",
    "open-atmos-jupyter-utils",
    "PySDM",
    "PyMieScatt",
    "SciPy",
    "dustpy; os_name != windows"
]

[project.urls]
Documentation = "https://open-atmos.github.io/PyPartMC"
Source = "https://github.com/open-atmos/PyPartMC/"
Tracker = "https://github.com/open-atmos/PyPartMC/issues"
